# KISA_LOP

./: .gitignore  CMakeCache.txt  CMakeLists.txt  FuturosCambios  Makefile  README.md  build.sh  cmake_install.cmake  output.txt  output2.txt  programa  test.sh
Best_LOP-Like/: IO.csv  MB.csv  RandA1.csv  RandA2.csv  RandB.csv  SGB.csv  xLOLIB.csv
GeneticAlgorithm/: experimentation.sh  plot.py  test.sh
GeneticAlgorithm/include/: memory.hpp
GeneticAlgorithm/results/: N-r100a2_pob100.txt  N-r100a2_pob150.txt  N-r100a2_pob200.txt  N-r100b2_pob100.txt  N-r100b2_pob150.txt  N-r100b2_pob200.txt  N-r150a0_pob150.txt  N-r150a0_pob200.txt  N-r150a0_pob300.txt  N-r150c0_pob150.txt  N-r150c0_pob200.txt  N-r150c0_pob300.txt  N-r200a0_pob200.txt  N-r200a0_pob300.txt  N-r200a0_pob400.txt  N-r200c0_pob200.txt  N-r200c0_pob300.txt  N-r200c0_pob400.txt  N-r250a0_pob250.txt  N-r250a0_pob375.txt  N-r250a0_pob500.txt  N-r250c0_pob250.txt  N-r250c0_pob375.txt  N-r250c0_pob500.txt
GeneticAlgorithm/results2/: N-r100a2_pob100.txt  N-r100a2_pob150.txt  N-r100a2_pob200.txt  N-r100b2_pob100.txt  N-r100b2_pob150.txt  N-r100b2_pob200.txt  N-r100d2_pob100.txt  N-r100d2_pob150.txt  N-r100d2_pob200.txt  N-r100e2_pob100.txt  N-r100e2_pob150.txt  N-r100e2_pob200.txt  N-r150a0_pob150.txt  N-r150a0_pob200.txt  N-r150a0_pob300.txt  N-r150a1_pob150.txt  N-r150a1_pob200.txt  N-r150a1_pob300.txt  N-r150ae_pob200.txt  N-r150c0_pob150.txt  N-r150c0_pob200.txt  N-r150c0_pob300.txt  N-r150e0_pob150.txt  N-r150e0_pob300.txt  N-r200a0_pob200.txt  N-r200a0_pob300.txt  N-r200a0_pob400.txt  N-r200b0_pob200.txt  N-r200b0_pob300.txt  N-r200b0_pob400.txt  (+21 more)
SimulatedAnnealing/: CMakeLists.txt  aux.md  execution.bash  plotter.py
SimulatedAnnealing/data/config/: Cebe.lop.n10.1.conf  N-r100a2.conf  N-r100a2_2.conf  N-r100a2_3.conf  N-r150a0.conf  N-r150a0_2.conf  N-r150a0_3.conf  N-r200a0.conf  N-r200a0_0.conf  N-r200a0_2.conf  N-r200a0_3.conf  N-r250a0.conf  N-r250a0_2.conf  N-r250a0_3.conf
SimulatedAnnealing/data/output/: Cebe.lop.n10.1.out  N-r100a2.out  N-r150a0.out  N-r200a0.out  N-r200a0_0.out  N-r200a0_2.out  N-r250a0.out
SimulatedAnnealing/data/test/: test_swap_expected_output.txt  test_swap_input.txt
SimulatedAnnealing/include/: LOP.hpp  Logger.hpp  SimulatedAnnealing.hpp
SimulatedAnnealing/src/: LOP.cpp  Logger.cpp  SimulatedAnnealing.cpp  main.cpp  swap_testing.cpp
include/: IO.hpp  LOP.hpp  common.hpp  memory.hpp
instances/: example.txt  example2.txt
src/: GA_main.cpp  IO.cpp  LOP.cpp  SA_main.cpp  a copy.cpp  a.cpp  main.cpp  memory.cpp
(+69 files in other folders)
